--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">HoMultiShootCamera</string>
+    <string name="app_name">MultiShootCameraDemo</string>
 </resources>
